--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,8 +1,10 @@
 header {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
+  margin-bottom: 25px;
+  box-shadow: 0 0px 6px 0px #0000002e;
 }
 
 #title {
